--- a/cms/static/sass/views/_unit.scss
+++ b/cms/static/sass/views/_unit.scss
@@ -17,6 +17,24 @@ body.course.unit,.view-unit {
     clear: both;
     float: left;
     width: 70%;
+
+    .list-actions {
+      padding:  ($baseline/2);
+      background: $gray-l5;
+
+      .action-primary {
+        @include blue-button();
+        @extend %t-action3;
+        font-weight: 600;
+
+        [class^="icon-"] {
+          @extend %t-icon5;
+          display: inline-block;
+          vertical-align: middle;
+          margin-top: -3px;
+        }
+      }
+    }
   }
 
   .unit-body.published {
